force-app/main/default/objects/SetupAuditTrail2__c/SetupAuditTrail2__c.object-meta.xml
<CustomObject>
    <description>The purpose of this custom object is to function as a persistent clone of the standard SetupAuditTrail entity.</description>
    <label>Setup Audit Trail 2</label>
    <nameField>
        <displayFormat>SAT2-{0000000}</displayFormat>
        <label>SAT2 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Audit Trails 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>