force-app/main/default/objects/SetupAuditTrail2__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The category of the change made in Setup. For example, a value of PermSetCreate indicates that an administrator created a permission set. The Display field contains more specific information.</description>
    <label>Action</label>
    <length>120</length>
    <type>Text</type>
</CustomField>