force-app/main/default/objects/SetupAuditTrail2__c/fields/CreatedByContext__c.field-meta.xml
<CustomField>
    <fullName>CreatedByContext__c</fullName>
    <description>The context under which the Setup change was made. For example, if Einstein uses cloud-to-cloud services to make a change in Setup, the value of this field is Einstein. This field is available in API version 48.0 and later.</description>
    <label>Created By Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>