force-app/main/default/objects/SetupAuditTrail2__c/fields/CreatedByIssuer__c.field-meta.xml
<CustomField>
    <fullName>CreatedByIssuer__c</fullName>
    <label>Created By Issuer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>