force-app/main/default/objects/SetupAuditTrail2__c/fields/DelegateUser__c.field-meta.xml
<CustomField>
    <fullName>DelegateUser__c</fullName>
    <description>The Login-As user who executed the action in Setup. If a Login-As user didn’t perform the action, this field is blank. This field is available in API version 35.0 and later.</description>
    <label>Delegate User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>