force-app/main/default/objects/SetupAuditTrail2__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <description>The full description of changes made in Setup. For example, if the Action field has a value of PermSetCreate, the Display field has a value like “Created permission set MAD: with user license Salesforce.</description>
    <label>Display</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>