force-app/main/default/objects/SetupAuditTrail2__c/fields/ResponsibleNamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleNamespacePrefix__c</fullName>
    <label>Source Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>