force-app/main/default/objects/SetupAuditTrail2__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>The section in the Setup menu where the action occurred. For example, Manage Users or Company Profile.</description>
    <label>Section</label>
    <length>40</length>
    <type>Text</type>
</CustomField>