force-app/main/default/objects/SetupAuditTrail2__c/fields/SetupAuditTrailCreatedById__c.field-meta.xml
<CustomField>
    <fullName>SetupAuditTrailCreatedById__c</fullName>
    <label>Setup Audit Trail Created By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>