force-app/main/default/objects/SetupAuditTrail2__c/fields/SetupAuditTrailCreatedByName__c.field-meta.xml
<CustomField>
    <fullName>SetupAuditTrailCreatedByName__c</fullName>
    <label>Setup Audit Trail Created By Name</label>
    <length>121</length>
    <type>Text</type>
</CustomField>