force-app/main/default/objects/SetupAuditTrail2__c/fields/SetupAuditTrailRecordCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SetupAuditTrailRecordCreatedDate__c</fullName>
    <description>Represents the source record create date from the SetupAuditTrail object.</description>
    <label>Setup Audit Trail Record Created Date</label>
    <type>DateTime</type>
</CustomField>