force-app/main/default/objects/SetupAuditTrail2__c/fields/SetupAuditTrailRecordId__c.field-meta.xml
<CustomField>
    <fullName>SetupAuditTrailRecordId__c</fullName>
    <description>Represents the source record Id from the SetupAuditTrail object.</description>
    <label>Setup Audit Trail Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>