force-app/main/default/objects/SetupAuditTrail2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SetupAuditTrailRecordCreatedDate__c</columns>
    <columns>SetupAuditTrailCreatedByName__c</columns>
    <columns>Action__c</columns>
    <columns>Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>